Enhance: Simplify Dialog function