@@ -75,15 +75,6 @@ kotlin {
             implementation(compose.desktop.currentOs)
             implementation(libs.kotlinx.coroutinesSwing)
             implementation(libs.ktor.client.cio)
-            implementation(libs.webViewKo)
-            implementation(libs.webViewKo.compose)
-            implementation(libs.jcef)
-        }
-
-        jvmMain {
-            dependencies {
-                implementation(libs.webViewKo.jvm)
-            }
         }
 
         commonTest.dependencies {
@@ -131,12 +122,5 @@ compose.desktop {
             packageName = "io.suroi"
             packageVersion = "1.0.0"
         }
-
-        jvmArgs(
-            "--add-opens=java.desktop/java.awt.peer=ALL-UNNAMED",
-            "--add-opens=java.desktop/sun.awt=ALL-UNNAMED",
-            "--add-opens=java.desktop/sun.lwawt=ALL-UNNAMED",
-            "--add-opens=java.desktop/sun.lwawt.macosx=ALL-UNNAMED",
-        )
     }
 }
